--- a/Quikr Analysis.ipynb
+++ b/Quikr Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,13 +10,14 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib as mpl\n",
+    "import sklearn\n",
     "%matplotlib inline\n",
     "mpl.style.use('ggplot')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +124,7 @@
        "4  36,000 kms    Diesel  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +144,7 @@
        "(892, 6)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +356,7 @@
        "(816, 6)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +567,7 @@
        "[816 rows x 6 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +780,7 @@
        "max          NaN  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +826,7 @@
        "       'Mercedes', 'Land', 'Jaguar', 'Jeep', 'Volvo'], dtype=object)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,14 +846,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_18592\\2788130517.py:3: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\dsori\\AppData\\Local\\Temp\\ipykernel_11412\\2788130517.py:3: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(ax.get_xticklabels(),rotation=40,ha='right')\n"
      ]
     },
@@ -883,32 +884,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 13.6% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 13.6% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
       "  warnings.warn(msg, UserWarning)\n",
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 13.0% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 13.0% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
       "  warnings.warn(msg, UserWarning)\n",
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 6.8% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 6.8% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
       "  warnings.warn(msg, UserWarning)\n",
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 10.6% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 10.6% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
       "  warnings.warn(msg, UserWarning)\n",
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 7.7% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 7.7% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
       "  warnings.warn(msg, UserWarning)\n",
-      "C:\\Users\\PC\\AppData\\Local\\Temp\\ipykernel_18592\\2542042277.py:3: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
+      "C:\\Users\\dsori\\AppData\\Local\\Temp\\ipykernel_11412\\2542042277.py:3: UserWarning: set_ticklabels() should only be used with a fixed number of ticks, i.e. after set_ticks() or using a FixedLocator.\n",
       "  ax.set_xticklabels(ax.get_xticklabels(),rotation=40,ha='right')\n",
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 9.3% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 9.3% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
       "  warnings.warn(msg, UserWarning)\n",
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 6.8% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 6.8% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
       "  warnings.warn(msg, UserWarning)\n",
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 9.6% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 9.6% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
       "  warnings.warn(msg, UserWarning)\n",
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 5.5% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\seaborn\\categorical.py:3399: UserWarning: 5.5% of the points cannot be placed; you may want to decrease the size of the markers or use stripplot.\n",
       "  warnings.warn(msg, UserWarning)\n"
      ]
     },
@@ -939,16 +940,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2471e8beda0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1900ce2f9d0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -976,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +986,7 @@
        "<Axes: xlabel='fuel_type', ylabel='Price'>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1014,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
@@ -1022,10 +1023,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2471ea66050>"
+       "<seaborn.axisgrid.FacetGrid at 0x1900d8591d0>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1054,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1206,7 +1207,7 @@
        "[815 rows x 5 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1217,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1227,7 @@
        "(815,)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1709,13 +1710,13 @@
        "OneHotEncoder()"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ohe=OneHotEncoder()\n",
+    "ohe= OneHotEncoder()\n",
     "ohe.fit(X[['name','company','fuel_type']])"
    ]
   },
@@ -1728,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1745,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1761,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1777,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 80,
    "metadata": {
     "scrolled": true
    },
@@ -1786,7 +1787,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\GITHUB PROJECTS\\car_price_predictor\\.venv\\lib\\site-packages\\sklearn\\compose\\_column_transformer.py:1667: FutureWarning: \n",
+      "d:\\GITHUB CLONES\\ML_cars\\.venv\\Lib\\site-packages\\sklearn\\compose\\_column_transformer.py:1667: FutureWarning: \n",
       "The format of the columns of the 'remainder' transformer in ColumnTransformer.transformers_ will change in version 1.7 to match the format of the other transformers.\n",
       "At the moment the remainder columns are stored as indices (of type int). With the same ColumnTransformer configuration, in the future they will be stored as column names (of type str).\n",
       "To use the new behavior now and suppress this warning, use ColumnTransformer(force_int_remainder_cols=False).\n",
@@ -2290,7 +2291,7 @@
        "                ('linearregression', LinearRegression())])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2301,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2317,16 +2318,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6135541165010463"
+       "0.6471332462694721"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2344,7 +2345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2360,7 +2361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2369,7 +2370,7 @@
        "np.int64(302)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2380,7 +2381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -2389,7 +2390,7 @@
        "0.8991157554877304"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2400,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2409,7 +2410,7 @@
        "array([430301.37134528])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2427,7 +2428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2436,7 +2437,7 @@
        "0.8991157554877304"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2452,7 +2453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2461,7 +2462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2470,7 +2471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2479,7 +2480,7 @@
        "array([456670.3272301])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2490,7 +2491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2586,7 +2587,7 @@
        "       'Volkswagen Vento Konekt', 'Volvo S80 Summum'], dtype=object)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2619,7 +2620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
